deploy/kyverno-verify-ledger-image.yml
apiVersion: kyverno.io/v1
kind: ClusterPolicy

metadata:
  name: verify-ledger-api-image

spec:
  validationFailureAction: Enforce
  webhookTimeoutSeconds: 30

  rules:
    - name: verify-ledger-api-signature

      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - payments

      verifyImages:
        - imageReferences:
            - "ghcr.io/sachinsingh2468/ledger-api:*"

          failureAction: Enforce

          attestors:
            - entries:
                - keyless:
                    subject: "https://github.com/SachinSingh2468/ledger-api-secure/.github/workflows/build.yml@refs/heads/main"
                    issuer: "https://token.actions.githubusercontent.com"
                    rekor:
                      url: "https://rekor.sigstore.dev"
